--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "LeinnyJimenez",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "nodemon": "^2.0.20"
   },
